Make correct comments in env file

--- a/env.sample
+++ b/env.sample
@@ -1,12 +1,21 @@
-WEB_DB_NAME=passport_recognition   # Название БД для yii2
-WEB_DB_USERNAME=root               # Имя пользователя БД
-WEB_DB_PASSWORD=                   # Пароль от БД
+# Название БД для yii2
+WEB_DB_NAME=passport_recognition
+# Имя пользователя БД
+WEB_DB_USERNAME=root
+# Пароль от БД
+WEB_DB_PASSWORD=
 
-WEB_USER_ADMIN_PASSWORD=           # Пароль от пользователя admin в web-приложении
+# Пароль от пользователя admin в web-приложении
+WEB_USER_ADMIN_PASSWORD=
 
-ANALYSIS_DB_NAME=fio               # Название БД для сервиса анализа
-ANALYSIS_DB_USERNAME=root          # Имя пользователя БД
-ANALYSIS_DB_PASSWORD=              # Пароль от БД
+# Название БД для сервиса анализа
+ANALYSIS_DB_NAME=fio
+# Имя пользователя БД
+ANALYSIS_DB_USERNAME=root
+# Пароль от БД
+ANALYSIS_DB_PASSWORD=
 
-QUEUE_SERVER_USERNAME=document-recognition-user   # Сервер очередей, имя пользователя
-QUEUE_SERVER_PASSWORD=                            # Сервер очередей, пароль
+# Сервер очередей, имя пользователя
+QUEUE_SERVER_USERNAME=document-recognition-user
+# Сервер очередей, пароль
+QUEUE_SERVER_PASSWORD=
